# pyStream

./: .gitignore  README.md  demo_receiver.py  demo_sender.py  pyproject.toml
src/pystream/: __init__.py  constants.py  exceptions.py  sender.py
src/pystream/core/: __init__.py  receiver.py  sender.py
src/pystream/utils/: validation.py
tests/test_utils/: test_validation.py
