[project]
name = "pystream"
version = "0.1.0"
description = "Simple video streaming"
authors = [
    { name = "Taeho Kim", email = "sinabero3271@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pystream"]
